--- a/petclinic/values.yaml
+++ b/petclinic/values.yaml
@@ -1,1 +1,15 @@
-test
+# Default values for hello-world.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
+
+replicaCount: 1
+
+image:
+  repository: nitturusaikrishna/devopslerning:v19
+  pullPolicy: IfNotPresent
+
+service:
+  type: NodePort
+  internalPort: 8080
+  externalPort: 8080
+  nodePort: 30100
